# Texas-Holdem

./: .gitignore  Game Mechanics  README.md  class_example.py  main.py  pyproject.toml
tests/: test_class_example.py
texas_holdem/: class_example.py  main.py  names.csv
